<resources>
    <string name="app_name">CoinWave</string>
    <string name="const_app_name">CoinWave</string>

    <!--Menu-->
    <string name="action_pick_favorite_coin">Pick favorite</string>
    <string name="action_share_this_app">Share this app</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_small_size">Small size</string>
    <string name="action_medium_size">Medium size</string>
    <string name="action_big_size">Big size</string>

    <!--Messages-->
    <string name="message_watchlist_is_empty">Your watchlist is empty</string>
    <string name="message_connection_error">You are currently offline.\nCheck your internet connection.</string>

    <!--Buttons-->
    <string name="btn_go_to_website">GO TO WEBSITE</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_read_more">Read more</string>
    <string name="btn_add_coin">Add coin</string>

    <!--Fields-->
    <string name="coin_name_field">Name</string>
    <string name="coin_market_cap_field">Market Cap</string>
    <string name="coin_24h_volume_field">Volume(24h)</string>
    <string name="coin_24h_price_field">Price(24h)</string>
    
    <!--Titles-->
    <string name="title_menu">Menu</string>
    <string name="title_cryptocurrency">Cryptocurrencies</string>
    <string name="title_pick_favorite">Pick favorite</string>
    <string name="title_add_to_watchlist">Add to watchlist</string>
    <string name="title_currencies">Currencies</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_news">Posts</string>
    
    <!--Timestamps-->
    <string name="last_updated">last updated:\n%s</string>
    <string name="timestamp_hours_ago" >%dh. ago</string>
    <string name="timestamp_last_seen_absolute" >last seen %s</string>
    <string name="timestamp_last_seen_relative" >last seen %s</string>
    <string name="timestamp_min_ago" >%dm. ago</string>
    <string name="timestamp_now" >just now</string>
    
</resources>
