<LinearLayout android:id="@+id/fragment_pick_favorite_header"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.blocksdecoded.coinwave.view.widgets.FontTextView
        android:id="@+id/pick_favorite_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:paddingTop="@dimen/header_content_padding"
        android:paddingBottom="@dimen/header_content_padding"
        android:paddingLeft="20dp"
        android:text="@string/coin_name_field"
        android:textSize="13sp"
        android:textColor="@color/light_text"
        app:ftv_typeface="light"/>

    <com.blocksdecoded.coinwave.view.widgets.FontTextView
        android:id="@+id/pick_favorite_market_cap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:textColor="@color/light_text"
        android:text="@string/coin_market_cap_field"
        android:textSize="13sp"
        app:ftv_typeface="light"/>

    <com.blocksdecoded.coinwave.view.widgets.FontTextView
        android:id="@+id/pick_favorite_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:textColor="@color/light_text"
        android:text="@string/coin_24h_volume_field"
        android:textSize="13sp"
        app:ftv_typeface="light"/>

    <com.blocksdecoded.coinwave.view.widgets.FontTextView
        android:id="@+id/pick_favorite_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="right"
        android:paddingRight="20dp"
        android:textColor="@color/light_text"
        android:text="@string/coin_24h_price_field"
        android:textSize="13sp"
        app:ftv_typeface="light"/>

</LinearLayout>