<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawer_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <androidx.cardview.widget.CardView
            android:id="@+id/drawer_close_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:cropToPadding="true"
            android:duplicateParentState="false"
            android:src="@drawable/ic_menu"
            app:backgroundTint="@color/main_light"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="18dp"
            app:cardBackgroundColor="@color/dark_grey"
            app:cardCornerRadius="22dp">
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="3dp"
                android:src="@drawable/ic_close"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/drawer_menu_title"
            android:theme="@style/AppTheme.DrawerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/drawer_close_menu"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_close_menu"
            app:layout_constraintLeft_toRightOf="@+id/drawer_close_menu"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/title_menu"
            android:paddingLeft="0dp" />

        <!--Pick favorite-->
        <TextView
            android:id="@+id/drawer_favorite"
            android:theme="@style/AppTheme.DrawerMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_pick_favorite_coin"
            app:layout_constraintTop_toBottomOf="@+id/drawer_close_menu" />

        <ImageView
            android:layout_width="@dimen/drawer_icon_size"
            android:layout_height="@dimen/drawer_icon_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_favorite"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_favorite_star"/>

        <ImageView
            android:layout_width="@dimen/drawer_arrow_size"
            android:layout_height="@dimen/drawer_arrow_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_favorite"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow_light"/>

        <!--Add to watchlist-->
        <TextView
            android:id="@+id/drawer_add_watchlist"
            android:theme="@style/AppTheme.DrawerMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_to_watchlist"
            app:layout_constraintTop_toBottomOf="@+id/drawer_favorite" />

        <ImageView
            android:layout_width="@dimen/drawer_icon_size"
            android:layout_height="@dimen/drawer_icon_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_add_watchlist"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_add_watchlist"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_plus"/>

        <ImageView
            android:layout_width="@dimen/drawer_arrow_size"
            android:layout_height="@dimen/drawer_arrow_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_add_watchlist"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_add_watchlist"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow_light"/>

        <!--Share app-->
        <TextView
            android:id="@+id/drawer_share_this_app"
            android:theme="@style/AppTheme.DrawerMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share_this_app"
            app:layout_constraintTop_toBottomOf="@+id/drawer_rate_us" />

        <ImageView
            android:layout_width="@dimen/drawer_icon_size"
            android:layout_height="@dimen/drawer_icon_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_share_this_app"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_share_this_app"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_share"/>

        <ImageView
            android:layout_width="@dimen/drawer_arrow_size"
            android:layout_height="@dimen/drawer_arrow_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_share_this_app"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_share_this_app"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow_light"/>

        <!--Rate us-->
        <TextView
            android:id="@+id/drawer_rate_us"
            android:theme="@style/AppTheme.DrawerMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_rate_us"
            app:layout_constraintTop_toBottomOf="@+id/drawer_contact_us" />

        <ImageView
            android:layout_width="@dimen/drawer_icon_size"
            android:layout_height="@dimen/drawer_icon_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_rate_us"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_rate_us"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_rate"/>

        <ImageView
            android:layout_width="@dimen/drawer_arrow_size"
            android:layout_height="@dimen/drawer_arrow_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_rate_us"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_rate_us"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow_light"/>

        <!--Contact us-->
        <TextView
            android:theme="@style/AppTheme.DrawerMenuItem"
            android:id="@+id/drawer_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_contact_us"
            app:layout_constraintTop_toBottomOf="@+id/drawer_add_watchlist" />

        <ImageView
            android:layout_width="@dimen/drawer_icon_size"
            android:layout_height="@dimen/drawer_icon_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_contact_us"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_contact_us"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_contact_us"/>

        <ImageView
            android:layout_width="@dimen/drawer_arrow_size"
            android:layout_height="@dimen/drawer_arrow_size"
            app:layout_constraintTop_toTopOf="@+id/drawer_contact_us"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_contact_us"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow_light"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <View
            android:id="@+id/drawer_company_selectable"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/drawer_company_icon"
            app:layout_constraintTop_toTopOf="@+id/drawer_company_icon"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_app_version"
            app:layout_constraintRight_toRightOf="@+id/drawer_company_title" />
        <ImageView
            android:id="@+id/drawer_company_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintRight_toLeftOf="@+id/drawer_company_title"
            app:layout_constraintTop_toTopOf="@+id/drawer_company_title"
            app:layout_constraintBottom_toBottomOf="@+id/drawer_company_title"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginRight="4dp"
            android:src="@drawable/img_blocks_decoded_small"
            android:alpha="0.6"/>

        <TextView
            android:id="@+id/drawer_company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/drawer_app_version"
            app:layout_constraintRight_toRightOf="@+id/drawer_app_version"
            app:layout_constraintBottom_toTopOf="@+id/drawer_app_version"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="4dp"
            android:text="Blocks Decoded"
            android:alpha="0.7"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/drawer_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="v1.0.0 debug"
            android:alpha="0.6"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>